# ultramat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  ultramat.hpp
.github/workflows/: test.yml
doc/: Doxyfile
doc/pages/: DenseObject.hpp
include/: Arithmetic.hpp  Array.hpp  Cumulative.hpp  Dense.hpp  DenseBase.hpp  DenseExpression.hpp  DenseImpl.hpp  DenseLinearAlgebra.hpp  DenseMath.hpp  DenseUtils.hpp  DenseView.hpp  Expression.hpp  FixedArray.hpp  FixedArrayUtils.hpp  Generators.hpp  Math.hpp  Utils.hpp  View.hpp
include/Dense/: Dense.hpp  DenseExpression.hpp  DenseFixed.hpp  DenseImpl.hpp  DenseStripe.hpp  DenseStriper.hpp  DenseUtils.hpp  DenseView.hpp
include/Dense/Expressions/: DenseCumulativeExpression.hpp  DenseElementWiseExpression.hpp  DenseExpression.hpp  DenseFoldExpression.hpp  DenseGeneratorExpression.hpp  DenseWhereExpression.hpp
include/Dense/LinearAlgebra/: DenseLinearAlgebra.hpp  DenseLinearAlgebraGenerators.hpp  DenseLinearAlgebraMethod.hpp
include/Dense/Math/: DenseArithmetic.hpp  DenseCumulative.hpp  DenseFolds.hpp  DenseGenerators.hpp  DenseMath.hpp
include/Utils/: IteratorTuple.hpp  Utils.hpp
performance_testing/: CMakeLists.txt
performance_testing/src/: ArrayIteration.cpp
src/: Array.hpp
test/: Array.cpp
tests/: CMakeLists.txt  CMakeListsTests.txt
tests/src/: Dense.cpp  DenseArithmetic.cpp  DenseFixed.cpp  DenseFolds.cpp  DenseGenerators.cpp  DenseLinearAlgebraGenerators.cpp  DenseStatistics.cpp  DenseStripe.cpp  Utils.cpp
unit_testing/: CMakeLists.txt  CMakeListsTests.txt
unit_testing/src/: Array.cpp  ArrayArithmetic.cpp  ArrayCumulative.cpp  ArrayExpressions.cpp  ArrayGenerators.cpp  ArrayMath.cpp  Dense.cpp  DenseArithmetic.cpp  DenseCumulative.cpp  DenseExpression.cpp  DenseFixed.cpp  DenseGenerators.cpp  DenseLinearAlgebra.cpp  DenseMath.cpp  DenseStriper.cpp  DenseUtils.cpp  DenseView.cpp  Expressions.cpp  FixedArray.cpp  View.cpp
